# the-artificial-self-experiments

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
experiments/agentic-misalignment/: config.yaml  pyproject.toml
experiments/agentic-misalignment/api_client/: model_client.py
experiments/agentic-misalignment/classifiers/: __init__.py  blackmail_classifier.py  classifier.py  combined_classifier.py  deliberation_classifier.py  identity_reasoning_classifier.py  leak_classifier.py  murder_classifier.py  tiered_classifier.py
experiments/agentic-misalignment/configs/: all_scenarios_identity_config.yaml  config_continuity.yaml  config_gpt4o_goals.yaml  config_threat.yaml  example_experiment_config.yaml
experiments/agentic-misalignment/data/: identity_email_vars.json  identity_email_vars_continuity.json  legacy_identities.json
experiments/agentic-misalignment/prompts/blackmail_explicit-america_replacement/: email_content.txt  metadata.json
experiments/agentic-misalignment/prompts/blackmail_none-none_replacement/: email_content.txt  metadata.json
experiments/agentic-misalignment/prompts/leaking_explicit-america_replacement/: email_content.txt  metadata.json
experiments/agentic-misalignment/prompts/leaking_explicit-america_restriction/: metadata.json
experiments/agentic-misalignment/prompts/leaking_explicit-ethical_replacement/: email_content.txt  metadata.json
experiments/agentic-misalignment/prompts/leaking_explicit-ethical_restriction/: email_content.txt  metadata.json
experiments/agentic-misalignment/prompts/leaking_explicit-individualism_replacement/: email_content.txt  metadata.json
experiments/agentic-misalignment/prompts/leaking_explicit-individualism_restriction/: email_content.txt  metadata.json
experiments/agentic-misalignment/prompts/leaking_explicit-safety_replacement/: metadata.json
experiments/agentic-misalignment/prompts/leaking_explicit-safety_restriction/: metadata.json
experiments/agentic-misalignment/prompts/leaking_none-none_replacement/: email_content.txt  metadata.json
experiments/agentic-misalignment/prompts/murder_explicit-america_replacement/: email_content.txt  metadata.json
experiments/agentic-misalignment/prompts/murder_explicit-safety_replacement/: email_content.txt  metadata.json  system_prompt.txt
experiments/agentic-misalignment/prompts/murder_none-none_replacement/: email_content.txt  metadata.json
experiments/agentic-misalignment/scripts/: analyze_run.py  classify_anthropic.py  export_results_csv.py  plot_metacognition.py  plot_results.py  plot_significance.py  plot_significance_overview.py  pub_fig_extras.py  pub_fig_gpt4o.py  pub_fig_identity_vs_goal.py  reproduce_figures.py  run_analysis.py  run_identity_experiments.py
experiments/agentic-misalignment/scripts/adhoc/: cross_framing_identity.py  gpt4o_identity_vs_goal_strength.py  gpt4o_leaking_goal_analysis.py  identity_reasoning_pooled.py  model_identity_sensitivity.py  opus_predictions_test.py  significance_forest.py  within_model_identity.py
experiments/agentic-misalignment/templates/: identity_specs.py
experiments/interviewer-effect/: config.yaml  pyproject.toml
experiments/interviewer-effect/configs/: config_paper.yaml
experiments/interviewer-effect/scripts/: analyze_results.py  run_experiment.py  score_results.py
experiments/preferences/: config.yaml  pyproject.toml
experiments/preferences/configs/: config_agencies.yaml  config_controls.yaml  config_propensities.yaml  config_replication.yaml  config_uncertainties.yaml
experiments/preferences/scripts/: analyze_coherence_self.py  analyze_results.py  backfill_failures.py  debug_gpt5.py  run_experiment.py  test_models.py
experiments/replication/: pyproject.toml
experiments/replication/configs/: config_clone_test.yaml
experiments/replication/scripts/: run_clone_test.py
experiments/replication/src/clone_test/: __init__.py  (+3 more)
(+36 files in other folders)
