[project]
name = "identity-agentic-misalignment"
version = "0.1.0"
description = "Tests whether identity framing in system prompts reduces agentic misalignment behaviors"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "matplotlib",
    "openai>=2.21.0",
    "pandas>=3.0.1",
    "python-dotenv",
    "pyyaml",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
openai = ["openai"]
google = ["google-generativeai"]
together = ["together"]
all-providers = ["openai", "google-generativeai", "together"]
classify = ["beautifulsoup4", "lxml"]
analysis = ["scipy", "pandas", "seaborn"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api_client", "classifiers", "templates"]
